--- a/GUI/Components/alternativeview.ui
+++ b/GUI/Components/alternativeview.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>MainDisplayClone</class>
- <widget class="QWidget" name="MainDisplayClone">
+ <class>AlternativeView</class>
+ <widget class="QWidget" name="AlternativeView">
   <property name="geometry">
    <rect>
     <x>0</x>
