--- a/GUI/Components/plotAxis/plotaxis.ui
+++ b/GUI/Components/plotAxis/plotaxis.ui
@@ -10,14 +10,8 @@
     <height>270</height>
    </rect>
   </property>
-  <property name="minimumSize">
-   <size>
-    <width>800</width>
-    <height>90</height>
-   </size>
-  </property>
-  <property name="windowTitle">
-   <string>Form</string>
+  <property name="styleSheet">
+   <string notr="true">QWidget#PlotAxis{border:1px solid  rgb(136, 138, 133);}</string>
   </property>
   <widget class="QWidget" name="verticalLayoutWidget">
    <property name="geometry">
