--- a/GUI/Components/originalview.ui
+++ b/GUI/Components/originalview.ui
@@ -73,19 +73,11 @@
         <number>0</number>
        </property>
        <item row="0" column="0">
-        <widget class="QLabel" name="label">
-         <property name="font">
-          <font>
-           <pointsize>20</pointsize>
-          </font>
+        <layout class="QVBoxLayout" name="graphLayout">
+         <property name="spacing">
+          <number>0</number>
          </property>
-         <property name="styleSheet">
-          <string notr="true">color: rgb(255, 255, 255);</string>
-         </property>
-         <property name="text">
-          <string>Plots</string>
-         </property>
-        </widget>
+        </layout>
        </item>
       </layout>
      </widget>
